<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="100dp"
            android:drawableStart="@drawable/ic_kleine_shape"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/appname" />


        <TextView
            android:id="@+id/tvWelcomeRegister"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/addressforrshopping"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@+id/tvWelcomeRegister"
            app:layout_constraintEnd_toEndOf="@+id/tvWelcomeRegister"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeRegister"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/quality"
            android:layout_marginTop="15dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccount"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvHaveAccount"
            app:layout_constraintStart_toStartOf="@+id/tvHaveAccount"
            app:layout_constraintEnd_toEndOf="@+id/tvHaveAccount"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/register_account" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLoginAccount"
            android:layout_width="@dimen/mediumButtonWidth"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/whiteButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccount"
            app:layout_constraintStart_toStartOf="@+id/buttonRegisterAccount"
            app:layout_constraintEnd_toEndOf="@+id/buttonRegisterAccount"
            android:layout_marginTop="12dp"
            android:text="@string/login_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>