<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="100dp"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"

            android:text="@string/appname" />


        <TextView
            android:id="@+id/tvWelcomeRegister"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            android:text="@string/welcome_login"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/tvNotHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeRegister"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/dont_have_account"
            />

        <EditText
            android:id="@+id/edLoginEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/tvNotHaveAccount"
            style="@style/editText"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="50dp"
            />

        <EditText
            android:id="@+id/edLoginPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/edLoginEmail"
            style="@style/editText"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/tvLoginForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/edLoginPassword"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            />


        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/buttonRegisterAccount"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/tvLoginForgotPassword"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            android:layout_marginTop="30dp"
            android:text="@string/login_account"
            app:spinning_bar_color="@color/white"/>

        <ImageView
            android:id="@+id/buttonLoginFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccount"
            android:src="@drawable/facebook_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Facebook"
            app:layout_constraintStart_toStartOf="@+id/buttonLoginFacebook"
            app:layout_constraintTop_toTopOf="@+id/buttonLoginFacebook"
            app:layout_constraintEnd_toEndOf="@+id/buttonLoginFacebook"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLoginFacebook" />


        <ImageView
            android:id="@+id/buttonLoginGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccount"
            android:src="@drawable/google_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google"
            app:layout_constraintStart_toStartOf="@+id/buttonLoginGoogle"
            app:layout_constraintTop_toTopOf="@+id/buttonLoginGoogle"
            app:layout_constraintEnd_toEndOf="@+id/buttonLoginGoogle"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLoginGoogle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>