<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ellips"
        app:layout_constraintBottom_toTopOf="@+id/guidelineEllipseBottom"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineEllipseTop"
        app:layout_constraintDimensionRatio="1:1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <TextView
        android:id="@+id/tvWelcomeRegister"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvAddressForShoppingMargin"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse"
        app:layout_constraintEnd_toEndOf="@+id/ellipse"
        app:layout_constraintStart_toStartOf="@+id/ellipse"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture"
        android:text="@string/addressforrshopping"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="35sp"/>

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h2"
        app:layout_constraintStart_toStartOf="@+id/tvWelcomeRegister"
        app:layout_constraintEnd_toEndOf="@+id/tvWelcomeRegister"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeRegister"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/quality"
        android:layout_marginTop="15dp"
        />
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineLeftTexture"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart"
        android:layout_width="@dimen/smallButtonWidth"
        android:layout_height="@dimen/smallButtonHeight"
        style="@style/blueButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/tvHaveAccount"
        app:layout_constraintStart_toStartOf="@+id/tvHaveAccount"
        app:layout_constraintEnd_toEndOf="@+id/tvHaveAccount"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_start" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEllipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />




</androidx.constraintlayout.widget.ConstraintLayout>