<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h3"
            android:layout_marginTop="100dp"
            android:drawablePadding="6dp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            android:text="@string/appname" />


        <TextView
            android:id="@+id/tvWelcomeRegister"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvAppName"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            android:text="@string/welcome_register"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="35sp"/>

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/h2"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeRegister"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/have_account"
            />

        <EditText
            android:id="@+id/edRegisterFirstName"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/tvHaveAccount"
            style="@style/editText"
            android:hint="Имя"
            android:inputType="textPersonName"
            android:layout_marginTop="24dp"
            />

        <EditText
            android:id="@+id/edRegisterLastName"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/edRegisterFirstName"
            style="@style/editText"
            android:hint="Фамилия"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/edRegisterEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/edRegisterLastName"
            style="@style/editText"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            />

        <EditText
            android:id="@+id/edRegisterPassword"
            android:layout_width="0dp"
            android:layout_height="@dimen/editTextHeight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/edRegisterEmail"
            style="@style/editText"
            android:hint="Password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            />



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonRegisterAccount"
            android:layout_width="0dp"
            android:layout_height="@dimen/mediumButtonHeight"
            style="@style/blueButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/edRegisterPassword"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            android:layout_marginTop="30dp"
            android:text="@string/register_account" />

        <ImageView
            android:id="@+id/buttonLoginFacebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccount"
            android:src="@drawable/facebook_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Facebook"
            app:layout_constraintStart_toStartOf="@+id/buttonLoginFacebook"
            app:layout_constraintTop_toTopOf="@+id/buttonLoginFacebook"
            app:layout_constraintEnd_toEndOf="@+id/buttonLoginFacebook"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLoginFacebook" />


        <ImageView
            android:id="@+id/buttonLoginGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintTop_toBottomOf="@id/buttonRegisterAccount"
            android:src="@drawable/google_login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google"
            app:layout_constraintStart_toStartOf="@+id/buttonLoginGoogle"
            app:layout_constraintTop_toTopOf="@+id/buttonLoginGoogle"
            app:layout_constraintEnd_toEndOf="@+id/buttonLoginGoogle"
            app:layout_constraintBottom_toBottomOf="@+id/buttonLoginGoogle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>